FIT: create account

--- a/meddist-ecommerce-api/tsconfig.json
+++ b/meddist-ecommerce-api/tsconfig.json
@@ -15,7 +15,13 @@
     "strictNullChecks": false,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "forceConsistentCasingInFileNames": true, // updated to true
+    "noFallthroughCasesInSwitch": false,
+
+    "moduleResolution": "node",
+    "paths": {
+      "@/*": ["src/*"]
+    },
+    "esModuleInterop": true
   }
 }
